fix #19 prevent horizontal scrolling

--- a/packages-custom/ayapi-ui/styles/atom.less
+++ b/packages-custom/ayapi-ui/styles/atom.less
@@ -12,8 +12,9 @@ atom-workspace {
   background-color: @app-background-color;
 }
 
-body /deep/ ::-webkit-scrollbar { 
-  display: none !important;
+body /deep/ ::-webkit-scrollbar {
+  width: 1px;
+  height: 1px;
 }
 
 .settings-view .checkbox{
