--- a/packages-custom/ayapi-ui/styles/editor.less
+++ b/packages-custom/ayapi-ui/styles/editor.less
@@ -45,9 +45,4 @@ atom-text-editor, atom-text-editor::shadow {
   .invisible-character {
     color: rgba(255,255,255,.3);
   }
-  .vertical-scrollbar,
-  .horizontal-scrollbar,
-  .scrollbar-corner {
-    display: none;
-  }
 }
